# gemtools-config

./: README.md  pyproject.toml  requirements.txt
examples/00_basic/: settings.py
examples/01_one_nested_file/: settings.py
examples/01_one_nested_file/conf/: config.toml
examples/10_two_files/: settings.py
examples/10_two_files/conf/: app.toml  debug.toml
examples/20_encrypted_file/: config.key  settings.py
examples/20_encrypted_file/conf/: config.toml
src/gemtoolsconfig/: __init__.py  configurations.py  exceptions.py  handlers.py  item.py  loader.py  presets.py
tests/: test_configurations.py  test_critical.py  test_find_suitable_file.py  test_get_argument.py  test_handler_file.py  test_handler_find_suitable_file.py  test_handler_from_source.py  test_item.py  test_loader.py  test_loader_builder.py  test_preset_file.py  test_preset_source.py
