[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemtoolsconfig"
version = "1.0.3"
authors = [
    { name = "Robin LIORET", email = "robin.lioret@capgemini.com" }
]
description = "A Generic Managment Tool package that helps to access configuration(s) over project(s)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "gemtoolsio @ git+https://github.com/Leikt/gemtools-io.git@v1.0.6",
    "six==1.16.0"
]

#[project.urls]
#"Homepage" = "https://github.com/Leikt/gemtools-io"
#"Bug Tracker" = "https://github.com/Leikt/gemtools-io/issues"
